Limpieza de code smells (SonarQube)